# CMSC-21-Finals

./: README.md
SariSariSleuth/: CMakeCache.txt  CMakeLists.txt  analyticsmodel.cpp  analyticsmodel.h  confirmedtransactionmodel.cpp  confirmedtransactionmodel.h  customshape.cpp  customshape.h  howmuchmodel.cpp  howmuchmodel.h  itemselectiondialog.cpp  itemselectiondialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  stockmodel.cpp  stockmodel.h  transactionmodel.cpp  transactionmodel.h
SariSariSleuth/Time-Series-AR-Modelling-in-Cpp-master/: main.cpp
SariSariSleuth/camera/: CMakeLists.txt  FrameProcessor.cpp  FrameProcessor.h  ImageProcessor.cpp  ImageProcessor.h  main.cpp
